# google-analytics-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml  run-local.sh
config/: .env.example  service-account.example.json
src/seo_analytics_mcp/: __init__.py  auth.py  config.py  server.py
src/seo_analytics_mcp/connectors/: __init__.py  ga4.py  gsc.py
src/seo_analytics_mcp/core/: __init__.py  analysis.py  normalization.py  scoring.py
src/seo_analytics_mcp/models/: __init__.py
